1. Collection API Улучшения[#100293]